class Scooter{
  // scooter code here
}


module.exports = Scooter