class User {
  // User code here
}

module.exports = User